# meson_and_ninja_tutorial

./: compile_commands.json  meson.build
include/: meson.build
src/: main.c  meson.build
src/max/: max.c  meson.build
subprojects/libmin/: meson.build  min.c
subprojects/libmin/include/: meson.build
